# CudaTemplate

./: CMakeLists.txt  README.md
src/: 1  cpuLib.cc  cpuLib.h  cudaLib.cu  cudaLib.h  main.cc  norm.cc  norm.h  tools.cu  tools.h  x
